Get rid of some defunct -temp cruft.